# oxideav-iff

./: CHANGELOG.md  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aiff_decode.rs  anim_decode.rs  pchg_parse.rs
src/: anim.rs  chunk.rs  ilbm.rs  lib.rs  svx.rs
src/aiff/: aesd.rs  appl.rs  chunk.rs  comment.rs  common.rs  demuxer.rs  error.rs  extended.rs  form.rs  instrument.rs  marker.rs  midi.rs  mod.rs  pcm.rs  precedence.rs  saxel.rs  text.rs
tests/: acbm.rs  aiff_instrument.rs  aiff_markers.rs  aiff_optional_chunks.rs  aiff_precedence.rs  aiff_saxel.rs  aiff_text_chunks.rs  anim_op1.rs  anim_op23.rs  anim_op4.rs  anim_op5_encode.rs  anim_op7_decode.rs  anim_op7_encode.rs  anim_op8_decode.rs  anim_op8_encode.rs  anim_playback.rs  deep_channels.rs  deep_multiframe.rs  group_children.rs  iff_deep_demuxer.rs  iff_truecolor.rs  iff_truecolor_demuxer.rs  ilbm_camg.rs  ilbm_crng_ccrt.rs  ilbm_dest.rs  ilbm_drng.rs  ilbm_lasso.rs  ilbm_palette_cycle.rs  ilbm_pchg_encode.rs  ilbm_pchg_header.rs  ilbm_pchg_huffman.rs  ilbm_pchg_robustness.rs  ilbm_pchg_wire.rs  ilbm_round2.rs  ilbm_round3.rs  ilbm_round4.rs  ilbm_sprt.rs  ilbm_truecolor24.rs  mux_roundtrip.rs  reserved_ids.rs  (+3 more)
