[package]
name = "oxideav-iff"
version = "0.0.4"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-iff"
authors = ["Mark Karpeles"]
description = "Pure-Rust EA IFF 85 container support (8SVX audio, ILBM, …) for oxideav"

readme = "README.md"
homepage = "https://github.com/OxideAV/oxideav-iff"
keywords = ["multimedia", "iff", "riff", "container", "pure-rust"]
categories = ["multimedia", "parser-implementations"]

[dependencies]
oxideav-core = "0.1"
